<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_fff_16"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="168dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/transfer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_transfer"
            android:textColor="#ff141414"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/cancel_all"
            android:layout_width="76dp"
            android:layout_height="32dp"
            android:layout_marginEnd="18dp"
            android:textColor="#ffa1a1a1"
            android:textSize="13sp"
            android:text="@string/cancel_all"
            android:gravity="center"
            android:background="@drawable/shape_0a272b30_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/top_line"/>

        <View
            android:id="@+id/top_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="19dp"
            android:background="#e0e0e0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transfer_title"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/file_transfer_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_line"
            app:layout_constraintBottom_toTopOf="@id/bottom_line"/>

        <View
            android:id="@+id/bottom_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="19dp"
            android:background="#e0e0e0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/file_transfer_recycler"/>

        <View
            android:id="@+id/bottom_menu"
            android:layout_width="0dp"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_line"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/done_btn"
            android:layout_width="122dp"
            android:layout_height="40dp"
            android:textColor="#ff158cff"
            android:textSize="16sp"
            android:text="@string/done"
            android:gravity="center"
            android:background="@drawable/selector_f3f3f3_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/bottom_menu"
            app:layout_constraintBottom_toBottomOf="@id/bottom_menu"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/background_receive_btn"
            android:layout_width="122dp"
            android:layout_height="40dp"
            android:textColor="#ff158cff"
            android:textSize="16sp"
            android:text="@string/background_receive"
            android:gravity="center"
            android:background="@drawable/selector_f3f3f3_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/bottom_menu"
            app:layout_constraintBottom_toBottomOf="@id/bottom_menu"/>

        <TextView
            android:id="@+id/transferring_remind_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_transferring_remind"
            android:textColor="#ffa1a1a1"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/bottom_menu"
            app:layout_constraintBottom_toBottomOf="@id/bottom_menu"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>